# capitol-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
bot/: __init__.py  alerting.py  capitol_scraper.py  cli.py  config.py  db.py  market_data.py  models.py  paper_trader.py  reporting.py  routine.py  strategy.py  symbol_resolver.py
config/: strategy.yaml
data/: benchmark_report.csv  daily_message.txt  disclosures.csv  equity_curve.csv  portfolio_history.csv  prices.csv  routine_status.json  run_manifest.json  signal_frame.csv  symbol_resolution.csv  target_diff.csv  targets.csv
docs/: coolify.md
tests/: test_strategy.py
